# MWEngine

./: CreateProject.bat  README.md
Core/: CMakeLists.txt
Core/Include/: CoreManager.h  IMiscellaneous.h  ISystem.h  MWCore.h  MWCoreAPI.h
Core/Include/ByteArray/: AMF3TypeCode.h  ByteArray.cpp  ByteArray.h  ByteStream.cpp  ByteStream.h  IBTSerialize.h  ISerialize.h  IVector.h
Core/Include/EBus/: EBus.h
Core/Include/GLM/: common.hpp  exponential.hpp  fwd.hpp  geometric.hpp  integer.hpp  matrix.hpp  packing.hpp  trigonometric.hpp  vector_relational.hpp
Core/Include/GLM/detail/: _noise.hpp  _swizzle.hpp  _vectorize.hpp  compute_common.hpp  compute_vector_relational.hpp  func_common.hpp  func_common.inl  func_common_simd.inl  func_exponential.hpp  func_exponential.inl  func_exponential_simd.inl  func_geometric.hpp  func_geometric.inl  func_geometric_simd.inl  func_integer.hpp  func_integer.inl  func_integer_simd.inl  func_matrix.hpp  func_matrix.inl  func_matrix_simd.inl  func_packing.hpp  func_packing.inl  func_trigonometric.hpp  func_trigonometric.inl  func_vector_relational.hpp  func_vector_relational.inl  func_vector_relational_simd.inl  intrinsic_common.hpp  intrinsic_common.inl  intrinsic_exponential.hpp  intrinsic_geometric.hpp  intrinsic_geometric.inl  intrinsic_integer.hpp  intrinsic_integer.inl  intrinsic_matrix.hpp  intrinsic_matrix.inl  intrinsic_trigonometric.hpp  intrinsic_vector_relational.hpp  precision.hpp  qualifier.hpp  (+43 more)
Core/Include/GLM/ext/: matrix_clip_space.hpp  matrix_clip_space.inl  matrix_double2x2.hpp  matrix_double2x2_precision.hpp  matrix_double2x3.hpp  matrix_double2x3_precision.hpp  matrix_double2x4.hpp  matrix_double2x4_precision.hpp  matrix_double3x2.hpp  matrix_double3x2_precision.hpp  matrix_double3x3.hpp  matrix_double3x3_precision.hpp  matrix_double3x4.hpp  matrix_double3x4_precision.hpp  matrix_double4x2.hpp  matrix_double4x2_precision.hpp  matrix_double4x3.hpp  matrix_double4x3_precision.hpp  matrix_double4x4.hpp  matrix_double4x4_precision.hpp  matrix_float2x2.hpp  matrix_float2x2_precision.hpp  matrix_float2x3.hpp  matrix_float2x3_precision.hpp  matrix_float2x4.hpp  matrix_float2x4_precision.hpp  matrix_float3x2.hpp  matrix_float3x2_precision.hpp  matrix_float3x3.hpp  matrix_float3x3_precision.hpp  matrix_float3x4.hpp  matrix_float3x4_precision.hpp  matrix_float4x2.hpp  matrix_float4x2_precision.hpp  matrix_float4x3.hpp  matrix_float4x3_precision.hpp  matrix_float4x4.hpp  matrix_float4x4_precision.hpp  matrix_projection.hpp  matrix_projection.inl  (+78 more)
Core/Include/GLM/gtc/: bitfield.hpp  bitfield.inl  color_space.hpp  color_space.inl  constants.hpp  constants.inl  epsilon.hpp  epsilon.inl  integer.hpp  integer.inl  matrix_access.hpp  matrix_access.inl  matrix_integer.hpp  matrix_inverse.hpp  matrix_inverse.inl  noise.hpp  noise.inl  packing.hpp  packing.inl  quaternion.hpp  quaternion.inl  random.hpp  random.inl  reciprocal.hpp  reciprocal.inl  round.hpp  round.inl  type_aligned.hpp  type_precision.hpp  type_precision.inl  type_ptr.hpp  type_ptr.inl
Core/Include/GLM/gtx/: associated_min_max.hpp  associated_min_max.inl  bit.hpp  bit.inl  closest_point.hpp  closest_point.inl  color_encoding.hpp  color_encoding.inl  color_space.hpp  color_space.inl  color_space_YCoCg.hpp  color_space_YCoCg.inl  common.hpp  common.inl  compatibility.hpp  compatibility.inl  component_wise.hpp  component_wise.inl  dual_quaternion.hpp  dual_quaternion.inl  easing.hpp  easing.inl  euler_angles.hpp  euler_angles.inl  extend.hpp  extend.inl  extended_min_max.hpp  extended_min_max.inl  extented_min_max.hpp  extented_min_max.inl  exterior_product.hpp  exterior_product.inl  fast_exponential.hpp  fast_exponential.inl  fast_square_root.hpp  fast_square_root.inl  fast_trigonometry.hpp  fast_trigonometry.inl  float_notmalize.inl  functions.hpp  (+91 more)
Core/Include/Log/: ILog.h
Core/Include/Memory/: IMemMan.h  IMemPort.h  IMemoryManager.h  MemArray.h  MemBase.h  MemList.h  MemLock.cpp  MemLock.h  MemManager.cpp  MemManager.h  MemMoniter.cpp  MemMoniter.h  MemPool.h  MemUnit.cpp  MemUnit.h  MemoryArray.h  MemoryChunk.h  MemoryChunkList.h  MemoryDefine.h  MemoryHelper.h  MemoryManager.h  MemoryNode.h  MemoryPool.h  PaddingCode.h  PoolManager.h  SingleModel.h
Core/Include/Module/: IModuleManager.h  Module.h  ModuleData.h
Core/Include/Reflect/: IReflectFactory.h  IReflectManager.h
Core/Include/Serialize/: ISerializable.h  ISerialize.h  SerializeAttribute.h  SerializeClass.h  SerializeMember.h
Core/Include/System/: ISystem.h
Core/src/: CoreManager.cpp  MWCoreAPI.cpp  Test.h
Core/src/ByteArray/: ByteArray.cpp  ByteStream.cpp
Core/src/Log/: LogManager.cpp  LogManager.h
Core/src/Memory/: MemoryArray.cpp  MemoryArray.h  MemoryChunk.cpp  MemoryChunk.h  MemoryChunkList.cpp  MemoryChunkList.h  MemoryDefine.cpp  MemoryHelper.cpp  MemoryHelper.h  MemoryManager.cpp  MemoryManager.h  MemoryNode.cpp  MemoryNode.h  MemoryPool.cpp  MemoryPool.h  PaddingCode.h  PoolManager.cpp  PoolManager.h
Core/src/Module/: ModuleData.cpp  ModuleManager.cpp  ModuleManager.h
Core/src/Reflect/: BaseDataReflectFactory.h  ReflectManager.cpp  ReflectManager.h
Core/src/Serialize/: SerializeClass.cpp  SerializeManager.cpp  SerializeManager.h  SerializeMember.cpp
Core/src/System/: System.cpp  System.h
Framework/: CMakeLists.txt
Framework/Include/: FrameworkManager.h  IFramework.h  IMiscellaneous.h  ISystem.h
Framework/Include/Entity/: Component.h  Entity.h  IEntitySystem.h  ITransformComponent.h
Framework/src/: FrameworkManager.cpp  FrameworkModule.cpp
Framework/src/Entity/: Component.cpp  Entity.cpp  EntitySystem.cpp  EntitySystem.h  TransformComponent.cpp  TransformComponent.h
Launcher/: CMakeLists.txt
Launcher/src/: Launcher.cpp
MWMath/: CMakeLists.txt
WorkSpace/: Launcher.ilk
WorkSpace/dll/: Core.ilk  MWMath.ilk
WorkSpace/dll/Debug/: Core.lib
WorkSpace/lib/Debug/: Core.lib  Framework.lib  MWMath.lib
